2015-02-16  Per Bothner  <per@bothner.com>

	* standard/ImportFromLibrary.java (handleImport): When searching
	for a class catch NoClassDefFoundError in addition to Exception.

2015-02-13  Per Bothner  <per@bothner.com>

	* standard/let.java (rewrite): Mark parameter 'tr' as final.  Java 8
	recognizes it as "effectively final" but in Java 7 it must be explicit.

2015-02-12  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (r5rsInstance, r6rsInstance, r7rsInstance):
	Make final and initialize in static initializer.
	(getR5rsInstance, getR5rsInstance, getR5rsInstance): Simplify
	accordingly.
	This fixes Savannah bug #44230 "slot-ref not working in r7rs mode".
	* standard/Scheme.java: Also some code cleanup/simplification by
	moving some initialization out of a 'static {...}' block.

2015-02-11  Per Bothner  <per@bothner.com>

	Implement support for patterns in 'let'.
	* lang/BindDecls.java: Make the methods non-static.
	(instance): New static fields.
	(allowShadowing, makeConstant): New fields to control variants.
	(define): New overridable method.
	* lang/Lambda.java (rewriteFormals): Use BindDecls.instance.
	* standard/MatchDef.java (scanDecls): Likewise.
	* standard/let.java: Rewrite to use BindDecls.

	* lang/Translator.java (renamedAliasCount): New helper method.

2015-02-09  Per Bothner  <per@bothner.com>

	* lang/Lambda.java: Add support for future pattern-matching
	using standard lambda macro - currently disabled.
	Add warning for conflicting deprecated type specifier syntax.

2015-01-11  Per Bothner  <per@bothner.com>

	* repl.java (processArgs): Add support for --console flag.
	Update --no-console to use CheckConsole class.
	(main): Likewise.
	* GuiConsole.java (main): Likewise.

2015-01-09  Andrea Bernardini <andrebask@gmail.com>

	* repl.java: Add --enable-anf and --debug-print-anf options.

2014-12-28  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Update class for 'receive'